corrected hidden scrollbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ body {
   height: 100%;
   min-height: 400px;
   min-width: 300px;
-  overflow: hidden;
+  /*overflow: hidden;*/
   font-family: "arial", sans-serif;
   font-size: 14px;
   color: #343434;
@@ -144,7 +144,7 @@ button:hover {
 #main-wrapper {
   width: 100%;
   height: 100%;
-  overflow: auto;
+  /*overflow: auto;*/
 }
 .col-2,
 .col-3,
